<resources>
    <string name="app_name">Geolocalisation</string>
    <string name="txtTitre">Chercher Ville</string>
    <string name="txtLatitude">Latitude</string>
    <string name="editTxtLatitude" />
    <string name="txtLongitude">Longitude</string>
    <string name="editTxtLongitude" />
    <string name="btnChercher">Chercher</string>
    <string name="txtResultat"> API data.gouv.fr =>France Only!</string>
    <string name="btnImage">Image</string>
    <string name="btnCarte">Carte</string>
    <string name="btnPosition">Afficher position</string>
    <string name="txtdrawGps">Localisation par GPS!</string>
    <string name="editTxtLatitudeGPS" />
    <string name="txtLongitudeGPS" />
    <string name="editTxtLongitudeGPS" />
    <string name="txtAltitudeGPS">Altitude</string>
    <string name="editTxtAltitudeGPS" />
    <string name="btnSource">Choisir la source</string>
    <string name="btnswitch">switch GPS</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Map</string>
</resources>
